--- a/cadastro.css
+++ b/cadastro.css
@@ -1,11 +1,34 @@
 #cadastro{
     text-align: center;
     color: black;
-    background: aqua;
+    background: yellow;
 }
 form{
     text-align: center;
+   
+
 }
 #body{
-    background:black;
+    background:rgb(236, 233, 233);
+}
+h2{
+    background-color: yellow;
+      border: 1px solid black;
+}
+label{
+    text-align: center;
+    
+}
+h1{
+    border: 1px solid black;
+}
+
+button{
+    background-color: rgb(19, 44, 187);
+    border: none;
+    color: white;
+    padding: 10px 32px;
+    text-decoration: whitesmoke;
+    display: inline-block;
+    font-size: 16px;
 }
